--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -26,7 +26,7 @@
       max-width: 10%;
       height: auto;
       margin-left: -90%;
-      margin-top: -1%;
+      margin-top: -4%;
     }
 
     header ul {
@@ -122,16 +122,15 @@
       border: none;
       cursor: pointer;
       font-weight: bold;
-      margin-left: 10px;
       transition: background-color 0.3s;
     }
 
     #enviar:hover {
-      background-color: #83c716b6;
+      background-color: #689e12;
     }
 
     #btn-logout {
-      background-color: rgba(221, 48, 48, 0.911);
+      background-color: rgb(216, 45, 45);
       border-radius: 10px;
       padding: 10px;
       border: none;
@@ -142,11 +141,11 @@
     }
 
     #btn-logout:hover {
-      background-color: rgba(221, 48, 48, 0.603);
+      background-color: rgb(180, 37, 37);
     }
 
     #btn-excluir-conta {
-      background-color: rgba(221, 48, 48, 0.911);
+      background-color: rgb(216, 45, 45);
       margin-left: auto;
       color: black;
       border: none;
@@ -158,7 +157,7 @@
     }
 
     #btn-excluir-conta:hover {
-      background-color: rgba(221, 48, 48, 0.603);
+      background-color: rgb(180, 37, 37);
     }
 
     .item {
