--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -26,7 +26,7 @@
       max-width: 10%;
       height: auto;
       margin-left: -90%;
-      margin-top: -4%;
+      margin-top: -7%;
     }
 
     header ul {
@@ -372,7 +372,7 @@
     const quiz = [
       {
         pergunta: "Qual destes materiais demora mais para se decompor na natureza?",
-        opcoes: ["Papel (2-6 semanas)", "Casca de banana (2 anos)", "Vidro (1 milhão de anos)", "Folhas secas (6 meses)"],
+        opcoes: ["Papel", "Casca de banana", "Vidro", "Folhas secas"],
         resposta: 2,
         explicacao: "O vidro pode levar até 1 milhão de anos para se decompor completamente na natureza!"
       },
