--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -30,6 +30,7 @@
                 </div>
             </div>
         </div>
+        <a href="add-produto.html">Adicione os produtos aqui</a>
     </header>
 
     <h2 id="subtitulo">CATEGORIAS</h2>
