--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -35,7 +35,11 @@
 
     <h2 id="subtitulo">CATEGORIAS</h2>
 
-    <main id="lista-produtos" class="grid-produtos">
+    <div id="lista-produtos" class="grid-produtos">
+
+    </div>
+    
+    <main>
         <aside>
             <h2>Higiene Pessoal</h2>
 
