--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -35,12 +35,12 @@
 
     <h2 id="subtitulo">CATEGORIAS</h2>
 
-    <div id="lista-produtos" class="grid-produtos">
+    <!-- <div id="lista-produtos" class="grid-produtos">
 
     </div>
-    
-    <main>
-        <aside>
+     -->
+    <main id="lista-produtos" class="grid-produtos">
+        <!-- <aside>
             <h2>Higiene Pessoal</h2>
 
             <img src="../assets/img/produto-1.jpg" alt="Shampoo Orgânico" class="produto-img"
@@ -158,7 +158,7 @@
                 <ion-icon name="star"></ion-icon>
                 <ion-icon name="star"></ion-icon>
             </div>
-        </aside>
+        </aside> -->
     </main>
 
     <div id="feedback" class="feedback"></div>
