--- a/paginas/home.html
+++ b/paginas/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="EcoMarket - Produtos ecológicos e sustentáveis">
     <link rel="stylesheet" href="../assets/estilo/style.css">
+    <link rel="stylesheet" href="../assets/estilo/detalhes-produto.css">
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <title>EcoMarket-SAMAVI</title>
 </head>
@@ -91,187 +92,20 @@
     </section>
 
     <!-- PRODUTOS EM DESTAQUE -->
-    <main class="corpo-categorias">
-        <h2 class="titulo">Produtos em Destaque</h2>
-        
-        <div class="linha">
-            <!-- PRODUTO 1 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-1.jpg" alt="Shampoo Orgânico">
-                <h4>Shampoo Orgânico</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 18,99</p>
-            </article>
+<main class="corpo-categorias">
+    <h2 class="titulo">Produtos em Destaque</h2>
+    <div class="linha" id="produtos-destaque">
+        <!-- Os produtos serão carregados dinamicamente aqui -->
+        <div class="loading">Carregando produtos...</div>
+    </div>
 
-            <!-- PRODUTO 2 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-2.jpg" alt="Cotonete Reutilizável">
-                <h4>Cotonete Reutilizável</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 25,99</p>
-            </article>
-
-            <!-- PRODUTO 3 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-3.jpg" alt="Sabonete Natural">
-                <h4>Sabonete Natural</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 27,99</p>
-            </article>
-
-            <!-- PRODUTO 4 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-4.jpg" alt="Escova de Dentes">
-                <h4>Escova de Dentes</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 15,99</p>
-            </article>
-        </div>
-
-        <!-- NOVIDADES -->
-        <h2 class="titulo">Novidades</h2>
-        
-        <div class="linha">
-            <!-- PRODUTO 5 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-5.jpg" alt="Camiseta de Algodão Orgânico">
-                <h4>Camiseta de Algodão Orgânico</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 18,99</p>
-            </article>
-
-            <!-- PRODUTO 6 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-6.jpg" alt="Bolsa Reciclável">
-                <h4>Bolsa Reciclável</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 25,99</p>
-            </article>
-
-            <!-- PRODUTO 7 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-7.jpg" alt="Pulseira de Sementes">
-                <h4>Pulseira de Sementes</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 27,99</p>
-            </article>
-
-            <!-- PRODUTO 8 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-8.jpg" alt="Copo de Bambu">
-                <h4>Copo de Bambu</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 15,99</p>
-            </article>
-        </div>
-
-        <!-- MAIS PRODUTOS -->
-        <div class="linha">
-            <!-- PRODUTO 9 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-9.jpg" alt="Vela de Soja">
-                <h4>Vela de Soja</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 18,99</p>
-            </article>
-
-            <!-- PRODUTO 10 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-10.jpg" alt="Toalha de Algodão Orgânico">
-                <h4>Toalha de Algodão Orgânico</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 25,99</p>
-            </article>
-
-            <!-- PRODUTO 11 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-11.jpg" alt="Jarra de Vidro Reciclado">
-                <h4>Jarra de Vidro Reciclado</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 27,99</p>
-            </article>
-
-            <!-- PRODUTO 12 -->
-            <article class="col-4">
-                <img src="../assets/img/produto-12.jpg" alt="Vasos Artesanais">
-                <h4>Vasos Artesanais</h4>
-                <div class="classificacao" aria-label="5 estrelas">
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                    <ion-icon name="star"></ion-icon>
-                </div>
-                <p>R$ 15,99</p>
-            </article>
-        </div>
-    </main>
+    <!-- NOVIDADES -->
+    <h2 class="titulo">Novidades</h2>
+    <div class="linha" id="produtos-novidades">
+        <!-- Os produtos serão carregados dinamicamente aqui -->
+        <div class="loading">Carregando produtos...</div>
+    </div>
+</main>
 
     <!-- OFERTAS (SEÇÃO VAZIA PARA FUTURO DESENVOLVIMENTO) -->
     <section class="ofertas">
