--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -46,6 +46,7 @@
 
     <div id="feedback" class="feedback"></div>
 
+    <script src="../assets/js/app.js"></script>
     <script src="../assets/js/carregar-produtos.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
