--- a/paginas/home.html
+++ b/paginas/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../assets/estilo/style.css">
     <link rel="stylesheet" href="../assets/estilo/detalhes-produto.css">
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>EcoMarket-SAMAVI</title>
 </head>
 <body>
@@ -93,18 +94,14 @@
 
     <!-- PRODUTOS EM DESTAQUE -->
 <main class="corpo-categorias">
+    <section class="produtos-section">
     <h2 class="titulo">Produtos em Destaque</h2>
     <div class="linha" id="produtos-destaque">
-        <!-- Os produtos serão carregados dinamicamente aqui -->
-        <div class="loading">Carregando produtos...</div>
+        <div class="loading">
+            <i class="fas fa-spinner fa-spin"></i> Carregando produtos...
+        </div>
     </div>
-
-    <!-- NOVIDADES -->
-    <h2 class="titulo">Novidades</h2>
-    <div class="linha" id="produtos-novidades">
-        <!-- Os produtos serão carregados dinamicamente aqui -->
-        <div class="loading">Carregando produtos...</div>
-    </div>
+</section>
 </main>
 
     <!-- OFERTAS (SEÇÃO VAZIA PARA FUTURO DESENVOLVIMENTO) -->
