--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/estilo/produtos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>EcoMarket/Produtos</title>
 </head>
 
@@ -18,12 +18,12 @@
         
         <div class="header-controls">
             <ul class="nav-list">
-                <li><a href="../paginas/home.html" class="nav-link" title="Página Inicial"><ion-icon name="home-outline"></ion-icon></a></li>
-                <li><a href="add-produto.html" class="nav-link" title="Adicionar Produto"><ion-icon name="add-circle-outline"></ion-icon></a></li>
+                <li><a href="../paginas/home.html" class="nav-link" title="Página Inicial"><i class="fas fa-home"></i></a></li>
+                <li><a href="add-produto.html" class="nav-link" title="Adicionar Produto"><i class="fas fa-plus-circle"></i></a></li>
             </ul>
             
             <div class="carrinho-icone" title="Carrinho de Compras">
-                <img src="../assets/img/carrinho.png" alt="Carrinho">
+                <i class="fas fa-shopping-cart"></i>
                 <span id="contador-carrinho">0</span>
                 <div class="carrinho-dropdown" id="carrinho-dropdown">
                     <div id="lista-carrinho"></div>
@@ -40,16 +40,15 @@
     <main>
         <h2 id="subtitulo">Nossos Produtos Sustentáveis</h2>
         <div id="lista-produtos" class="grid-produtos">
-            <!-- Produtos serão carregados dinamicamente aqui -->
+            <div class="loading">
+                <i class="fas fa-spinner fa-spin"></i> Carregando produtos...
+            </div>
         </div>
     </main>
 
-    <div id="feedback" class="feedback"></div>
+    <div id="feedback"></div>
 
     <script src="../assets/js/app.js"></script>
     <script src="../assets/js/carregar-produtos.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
-
 </html>
