--- a/paginas/home.html
+++ b/paginas/home.html
@@ -26,7 +26,7 @@
             <!-- BARRA DE NAVEGAÇÃO -->
             <nav class="navbar">
                 <div class="logo">
-                    <img src="../assets/img/logo-300.png" alt="Logo EcoMarket" width="125">
+                    <img src="../assets/img/logo.jpg" alt="Logo EcoMarket" width="125">
                 </div>
 
                 <!-- MENU PRINCIPAL -->
