voltando no tempo

--- a/paginas/home.html
+++ b/paginas/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="EcoMarket - Produtos ecológicos e sustentáveis">
-    <link rel="stylesheet" href="../assets/estilo/style.css">
+    <link rel="stylesheet" href="../assets/estilo/home.css">
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <title>EcoMarket-SAMAVI</title>
 </head>
@@ -24,7 +24,7 @@
             <!-- BARRA DE NAVEGAÇÃO -->
             <nav class="navbar">
                 <div class="logo">
-                    <img src="../assets/img/verde-300.png" alt="Logo EcoMarket" width="125">
+                    <img src="../assets/img/logo.png" alt="Logo EcoMarket" width="200">
                 </div>
 
                 <!-- MENU PRINCIPAL -->
@@ -51,8 +51,7 @@
                     </div>
                 </div>
 
-                <!-- MENU MOBILE -->
-                <img src="../assets/img/menu.png" alt="Menu Mobile" class="menu-celular" onclick="menucelular()">
+               
             </nav>
 
             <!-- HERO BANNER -->
