--- a/paginas/home.html
+++ b/paginas/home.html
@@ -6,6 +6,7 @@
     <meta name="description" content="EcoMarket - Produtos ecológicos e sustentáveis">
     <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="../assets/estilo/estiloprod.css">
     <link rel="stylesheet" href="../assets/estilo/home.css">
     <title>EcoMarket - Home</title>
 </head>
@@ -111,7 +112,7 @@
     </section>
 
     <!-- SCRIPTS -->
-
+    <script type="module" src="/js/modules/config.js"></script>
     <script type="module" src="../assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
