--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -44,6 +44,7 @@
 
     <div id="feedback"></div>
 
+    <script type="module" src="/js/modules/config.js"></script>
     <script type="module" src="../assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
