--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../assets/estilo/addprod.css">
-    <title>EcoMarket / Adicionar Produtos</title>
+    <title>EcoMarket - Adicionar Produtos</title>
 </head>
 <body>
   <div class="container">
