--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -1,106 +1,123 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-    <title>Contatos</title>
-    <style>
-        body {
-            background-color: #f0f0f0;
-            padding: 40px;
-            font-family: Arial, sans-serif;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <title>Contatos</title>
+  <style>
+    :root {
+      --verde-folha: #3A6351;
+      --verde-claro: #A8C686;
+      --marrom-terra: #7B5E42;
+      --bege-areia: #F2E8CF;
+      --branco-neve: #FFFFFF;
+      --cinza-pedra: #4F4F4F;
+    }
 
-        header {
-            background: linear-gradient(to right, #597729, #83c716);
-            color: white;
-            margin: auto;
-            max-width: 430px;
-            height: 40px;
-            padding: 20px;
-            text-align: center;
-            position: relative;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        header ul {
-            position: absolute;
-            top: 10px;
-            right: 20px;
-            list-style-type: none;
-            font-weight: bolder;
-        }
+    body {
+      background-color: var(--bege-areia);
+      padding: 40px;
+      font-family: Arial, sans-serif;
+      color: var(--cinza-pedra);
+    }
 
-        header ul li {
-            color: white;
-        }
+    header {
+      background: linear-gradient(to right, var(--verde-folha), var(--verde-claro));
+      color: var(--branco-neve);
+      margin: auto;
+      max-width: 430px;
+      height: 40px;
+      padding: 20px;
+      text-align: center;
+      position: relative;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-        header a {
-            font-size: 30px;
-            padding: 5px;
-        }
+    header ul {
+      position: absolute;
+      top: 6px;
+      right: 20px;
+      list-style-type: none;
+      font-weight: bold;
+    }
 
-        header a:hover {
-            background-color: black;
-            transition: 0.5s;
-            padding: 8px;
-            border-radius: 20px;
-        }
+    header ul li {
+      color: var(--branco-neve);
+      font-size: 28px;
+    }
 
-        header a:visited {
-            color: white;
-        }
+    header a {
+      padding: 5px;
+      color: var(--branco-neve);
+      text-decoration: none;
+    }
 
-        main {
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 12px;
-            max-width: 400px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            justify-content: center;
-            flex-flow: column wrap;
-            margin: auto;
-        }
+    header a:hover {
+      background-color: var(--cinza-pedra);
+      transition: 0.5s;
+      border-radius: 20px;
+    }
 
-        main img {
-            width: 150px;
-            height: auto;
-            align-self: center;
-        }
+    main {
+      background-color: var(--branco-neve);
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 400px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      display: flex;
+      justify-content: center;
+      flex-flow: column wrap;
+      margin: auto;
+    }
 
-        h1 {
-            text-align: center;
-            color: #563434;
-        }
+    main img {
+      width: 150px;
+      height: auto;
+      align-self: center;
+      margin-bottom: 20px;
+    }
 
-        h2 {
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 10px;
-        }
-    </style>
+    h1 {
+      text-align: center;
+      color: var(--verde-folha);
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      font-size: 1.1em;
+      color: var(--cinza-pedra);
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 
 <body>
-    <header>
-        <ul>
-            <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
-        </ul>
-    </header>
-    <main>
-        <img src="../assets/img/verde-300.png" alt="Logo EcoMarket">
-        <h1>Contatos</h1>
-        <h2>Nome: EcoMarket-Samavi</h2>
-        <h2>Telefone: (77) 99191-7432</h2>
-        <h2>Gmail: RafaOliveira84555@gmail.com</h2>
-    </main>
+  <header>
+    <ul>
+      <li>
+        <a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a>
+      </li>
+    </ul>
+  </header>
+  <main>
+    <img src="../assets/img/logo.png" alt="Logo EcoMarket" />
+    <h1>Contatos</h1>
+    <h2>Nome: EcoMarket-Samavi</h2>
+    <h2>Telefone: (77) 99191-7432</h2>
+    <h2>Gmail: RafaOliveira84555@gmail.com</h2>
+  </main>
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
-
 </html>
