--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -10,6 +10,10 @@
 <body>
   <div class="container">
     <h1>Adicionar Novo Produto</h1>
+    <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos">
+  <ion-icon name="storefront-outline"></ion-icon>
+</a>
+
     <form id="form-produto">
       <div class="form-group">
         <label for="nome">Nome do Produto:</label>
@@ -45,5 +49,7 @@
   </div>
   
   <script src="../js/cadastro-produto.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
