--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -19,7 +19,7 @@
 
         <div class="header-controls">
             <ul>
-                <li><a href="../paginas/home.html"><ion-icon name="home-outline"></ion-icon></a></li>
+                <li><a href="../paginas/home.html"><ion-icon name="home-outline" id="home-p"></ion-icon></a></li>
                 <li><a href="add-produto.html" class="nav-link" title="Adicionar Produto"><i class="fas fa-plus-circle"></i></a></li>
             </ul>
 
