--- a/paginas/detalhes-produto.html
+++ b/paginas/detalhes-produto.html
@@ -21,6 +21,9 @@
                     <i class="fas fa-edit"></i> Editar Produto
                 </button>
             </div>
+            <a href="../paginas/home.html" class="btn-home">
+                <ion-icon name="home-outline"></ion-icon>
+            </a>
         </div>
     </div>
 
@@ -126,5 +129,7 @@
             `;
         }
     </script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
