--- a/paginas/home.html
+++ b/paginas/home.html
@@ -95,7 +95,7 @@
 <main class="home-page">
     <section class="produtos-section">
     <h2 class="titulo">Produtos em Destaque</h2>
-    <div class="linha" >
+    <div >
         <div class="produtos-grid" id="produtos-destaque"></div>
     </div>
 </section>
