pronto para uso

--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -33,9 +33,11 @@
       <div class="form-group">
         <label for="categoria">Categoria:</label>
         <select id="categoria" name="categoria" required>
+          <option value="selecione">Selecione...</option>
           <option value="artesanal">Artesanal</option>
           <option value="ecologico">Ecológico</option>
           <option value="sustentavel">Sustentável</option>
+          <option value="outro">Outro</option>
         </select>
       </div>
       
