--- a/paginas/home.html
+++ b/paginas/home.html
@@ -47,7 +47,7 @@
                         <div id="lista-carrinho"></div>
                         <div class="carrinho-total" id="total-carrinho">Total: R$ 0,00</div>
                         <div class="carrinho-botoes">
-                            <button class="btn-remover" data-index="${index}">Remover</button>
+                            <button class="btn-limpar">Limpar Carrinho</button>
                             <button id="finalizar-compra" class="btn-finalizar">Finalizar Compra</button>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
     </section>
 
     <!-- SCRIPTS -->
-    <script type="module" src="/js/modules/config.js"></script>
+    <script type="module" src="../assets/js/modules/config.js"></script>
     <script type="module" src="../assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
